# plansys2_llm_monitor

./: .gitignore  AGENTS.md  CLAUDE.md  INTEGRATION.md  README.md
plansys2_llama_monitor/: CMakeLists.txt  package.xml  plansys2_llama_monitor_plugin.xml
plansys2_llama_monitor/include/plansys2_llama_monitor/: llama_monitor.hpp
plansys2_llama_monitor/src/plansys2_llama_monitor/: llama_monitor.cpp
plansys2_llama_solver/: package.xml
plansys2_llama_solver/include/plansys2_llama_solver/: llama_solver.hpp
plansys2_llama_solver/src/plansys2_llama_solver/: llama_solver.cpp
plansys2_monitor/: CMakeLists.txt  package.xml
plansys2_monitor/include/plansys2_monitor/: MonitorBase.hpp  MonitorClient.hpp  MonitorInterface.hpp  MonitorNode.hpp
plansys2_monitor/launch/: monitor_launch.py
plansys2_monitor/params/: monitor_params.yaml
plansys2_monitor/src/: monitor_client.cpp  monitor_node.cpp
plansys2_monitor/src/plansys2_monitor/: MonitorClient.cpp  MonitorNode.cpp
plansys2_monitor_msgs/: CMakeLists.txt  package.xml
plansys2_monitor_msgs/msg/: Proposal.msg  ProposalArray.msg
plansys2_monitor_msgs/srv/: GetProposal.srv
plansys2_solver/: CMakeLists.txt  package.xml
plansys2_solver/include/plansys2_solver/: SolverBase.hpp  SolverClient.hpp  SolverInterface.hpp  SolverNode.hpp
plansys2_solver/launch/: solver_launch.py
plansys2_solver/params/: solver_params.yaml
plansys2_solver/src/: solver_client.cpp  solver_node.cpp
plansys2_solver/src/plansys2_solver/: SolverClient.cpp  SolverNode.cpp
