<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plansys2_llama_monitor</name>
  <version>0.0.0</version>
  <description>llama.cpp-based monitor plugin for the plansys2 LLM-assisted plan monitor module</description>
  <maintainer email="a.valencia.2022@alumnos.urjc.es">avalen2022</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>plansys2_monitor</depend>
  <depend>pluginlib</depend>

  <exec_depend>llama_cli</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros2run</test_depend>
  <test_depend>ament_index_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <plansys2_monitor plugin="${prefix}/plansys2_llama_monitor_plugin.xml" />
  </export>
</package>
