<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plansys2_solver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="a.valencia.2022@alumnos.urjc.es">avalen2022</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ament_index_cpp</depend>
  <depend>plansys2_core</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_solver_msgs</depend>
  <depend>pluginlib</depend>
  <depend>lifecycle_msgs</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>nlohmann-json-dev</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros2run</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
